<resources>
    <string name="app_name">FFT</string>
    <string name="action_settings">Settings</string>
    <string name="level_button_text">Play</string>
    <string name="puzzle_name">Puzzle 1</string>
    <string name="large_text">Pog</string>
    <string name="back_button">back button</string>
    <string name="shuffle_button">shuffle button</string>
    <string name="level_is_passed">level is passed</string>
    <string name="title_activity_settings">Настройки</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="play">Play</string>
    <string name="settingsSwitchText1">То зачем ты меня скачал</string>
    <string name="settingsSwitchText2">Темная тема</string>
    <string name="settingsSwitchText4">♂️Right mode♂️</string>
    <string name="settingsSwitchText0">Режим левши</string>
</resources>